<resources>
    <string name="app_name">Medicine Reminder</string>
    <string name="medications">Medications</string>
    <string name="my_list"> List</string>

    <string name="treatment_name">Medication Name</string>
    <string name="text_type">Type</string>
    <string name="num_of_dose">Times of Medication dose</string>
    <string name="text_repetition">Time of Repetition</string>
    <string name="dose_amount">Dose Amount</string>
    <string name="button_next">Next</string>

    <string name="first_Dose">Setup First Dose</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">remind me until</string>
    <string name="alarm_set">Alarm Set</string>


    <string name="medicine_summary">%1$s ,%2$d %3$s - %4$d times %5$s</string>
    <string name="channel_name">Medicine Reminder</string>
    <string name="channel_description">Notification Channel for Medicine Reminder Application</string>
</resources>