<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_treat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/treatment_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_medication_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="          name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_treat_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_treat_name"
        app:layout_constraintTop_toTopOf="@+id/text_treat_name" />

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_type"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_treat_name" />

    <Spinner
        android:id="@+id/spinner_treatment_type"
        android:entries="@array/medication_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_type"
        app:layout_constraintStart_toEndOf="@+id/text_type"
        app:layout_constraintTop_toBottomOf="@+id/text_treat_name" />

    <TextView
        android:id="@+id/text_num_of_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/num_of_dose"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_type"
        app:layout_constraintTop_toBottomOf="@+id/text_type" />

    <Spinner
        android:id="@+id/spinner_medication_dose"
        android:entries="@array/medication_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_num_of_dose"
        app:layout_constraintStart_toEndOf="@+id/text_num_of_dose"
        app:layout_constraintTop_toTopOf="@+id/text_num_of_dose"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_repetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_repetition"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_num_of_dose"
        app:layout_constraintTop_toBottomOf="@+id/text_num_of_dose" />


    <Spinner
        android:id="@+id/spinner_medication_repetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/repetition_time"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_repetition"
        app:layout_constraintStart_toEndOf="@+id/text_repetition"
        app:layout_constraintTop_toTopOf="@+id/text_repetition" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_dose_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/dose_amount"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/text_repetition"
        app:layout_constraintTop_toBottomOf="@+id/text_repetition" />

    <Spinner
        android:id="@+id/spinner_dose_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/medication_amount"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_dose_amount"
        app:layout_constraintStart_toEndOf="@+id/text_dose_amount"
        app:layout_constraintTop_toTopOf="@+id/text_dose_amount" />

    <TextView
        android:id="@+id/tv_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="pills"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_dose_amount"
        app:layout_constraintStart_toEndOf="@+id/spinner_dose_amount"
        app:layout_constraintTop_toTopOf="@+id/spinner_dose_amount" />

    <TextView
        android:id="@+id/summary_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dose_amount"
        tools:text="summary" />

</androidx.constraintlayout.widget.ConstraintLayout>
