<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="false"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_setup_first_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_Dose"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/start_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_setup_first_dose"
        app:layout_constraintTop_toBottomOf="@+id/tv_setup_first_dose" />


    <TextView
        android:id="@+id/tv_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_start_time"
        app:layout_constraintStart_toEndOf="@+id/tv_start_time"
        app:layout_constraintTop_toTopOf="@+id/tv_start_time"
        tools:text="8 pm" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_drop_down"
        app:layout_constraintBottom_toBottomOf="@+id/tv_timepicker"
        app:layout_constraintStart_toEndOf="@+id/tv_timepicker"
        app:layout_constraintTop_toTopOf="@+id/tv_timepicker" />

    <TextView
        android:id="@+id/start_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_start_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_time" />

    <TextView
        android:id="@+id/tv_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_time_tv"
        app:layout_constraintStart_toEndOf="@+id/start_time_tv"
        app:layout_constraintTop_toTopOf="@+id/start_time_tv"
        tools:text="nov 22 2022" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_datePicker"
        app:layout_constraintStart_toEndOf="@+id/tv_datePicker"
        app:layout_constraintTop_toTopOf="@+id/tv_datePicker"
        app:srcCompat="@drawable/ic_arrow_drop_down" />

    <Button
        android:id="@+id/button_alarm_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:padding="4dp"
        android:text="@string/alarm_set"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>